Corrected twitter username/

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <article>
       <section>
         <h1>React and Flux... and a little Redux</h1><span class="tiny-subheader">Modern web app technology</span><img src="images/profile.jpg" class="avatar avatar--small">
-        <h3 class="avatar-name"><a href="https://twitter.com/markdalgleish">Chris Dolphin   @likethemammal</a></h3><a href="http://goo.gl/7SQD6V" class="floating-link">Slides: http://goo.gl/7SQD6V</a>
+        <h3 class="avatar-name"><a href="https://twitter.com/likethemammal">Chris Dolphin   @likethemammal</a></h3><a href="http://goo.gl/7SQD6V" class="floating-link">Slides: http://goo.gl/7SQD6V</a>
       </section>
       <section data-bespoke-state="green" class="light">
         <h2>Goals of this talk</h2>
@@ -280,7 +280,7 @@
       </section>
       <section data-bespoke-state="green" class="light">
         <h2><a href="http://goo.gl/7SQD6V">http://goo.gl/7SQD6V</a></h2><br><img src="images/profile.jpg" class="avatar avatar--small">
-        <h3 class="avatar-name"><a href="https://twitter.com/markdalgleish">@likethemammal</a><br><a href="https://likethemammal.com">  likethemammal.com</a></h3>
+        <h3 class="avatar-name"><a href="https://twitter.com/likethemamml">@likethemammal</a><br><a href="https://likethemammal.com">  likethemammal.com</a></h3>
         <p>Always looking for new projects<br><a href="mailto:dolphin@likethemammal.com">dolphin@likethemammal.com</a></p>
         <script src="scripts/scripts.js"></script>
   </body>
